[project]
name = "health-tracker-app"
version = "1.0.0"
description = "AI-powered health tracking application"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "flask>=2.3.3",
    "flask-login>=0.6.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.1",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.2",
    "groq>=0.4.2",
    "passlib>=1.7.4",
    "sqlalchemy>=2.0.27",
    "werkzeug>=2.3.7",
    "python-dotenv>=1.0.0"
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
